--- a/index.html
+++ b/index.html
@@ -263,6 +263,51 @@
             				box-shadow: 0px 70px 100px #eee, 0px -70px 100px #eee;
             				-webkit-animation-duration: 0.5s; animation-duration: 0.5s; -moz-animation-duration: 0.5s; -o-animation-duration: 0.5s; }
 
+            .overlay {
+			    height: 100%;
+			    width: 0;
+			    position: fixed;
+			    z-index: 2001;
+			    top: 0;
+			    left: 0;
+			    background-color: rgb(0,0,0);
+			    background-color: rgba(0,0,0, 0.8);
+			    overflow-x: hidden;
+			    transition: 0.5s;
+			}
+
+			#loader {
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				z-index: 2002;
+				width: 150px;
+				height: 150px;
+				margin: -75px 0 0 -75px;
+				border: 16px solid #f3f3f3;
+				border-radius: 50%;
+				border-top: 16px solid #007bff;
+				width: 120px;
+				height: 120px;
+				-webkit-animation: spin 2s linear infinite;
+				animation: spin 2s linear infinite;
+			}
+
+			@-webkit-keyframes spin {
+				0% { -webkit-transform: rotate(0deg); }
+				100% { -webkit-transform: rotate(360deg); }
+			}
+
+			@keyframes spin {
+				0% { transform: rotate(0deg); }
+				100% { transform: rotate(360deg); }
+			}
+
+			#loaderDiv {
+				display: none;
+				text-align: center;
+			}
+
             .btn-sm-long { margin-top: 14px; padding: 0.05rem 0.5rem 0.05rem 0.5rem; font-size: 1.0rem; line-height: 1.5; border-radius: 0.2rem; width: 30%;}
             .btn-outline-white { color: white; border-color: white; border-width: 3px; background-color: transparent; }
             .btn-outline-white:hover { color: #007bff; background-color: white; }
@@ -964,6 +1009,10 @@
 			</div>
 		</div>
 
+		<div id="dimmer" class="overlay">
+			<div id="loader"></div>
+		</div>
+
 		<script type="text/javascript">
         	var drawbot = new Drawbot();
         	var drawing = new Drawing();
@@ -1027,6 +1076,16 @@
                 }
             });
 
+            function dimScreen() {
+			    document.getElementById("dimmer").style.width = "100%";
+			    document.getElementById("loader").style.display = "block";
+			}
+
+			function undimScreen() {
+			    document.getElementById("dimmer").style.width = "0%";
+			    document.getElementById("loader").style.display = "none";
+			}
+
             function loadNewFile() {
             	var drawbot = new Drawbot();
 
@@ -1084,7 +1143,7 @@
 							var sWidth = 0, 
 								sHeight = 0;
 
-							var imgData;
+							var worker;
 
 							var zoomCanvas = $("#zoom-canvas");
 							var zoomCtx = zoomCanvas[0].getContext('2d');
@@ -1095,6 +1154,12 @@
 	                    	$('#imgFilterModal').modal({
 								keyboard: false
 							});
+
+							if (typeof(Worker) !== "undefined") {
+				        		worker = new Worker('js/worker.js');
+
+							  	worker.addEventListener('message', workerCallback, false);
+							}
 
 	                    	function getRect(canvas) {
 	                    		return canvas.getBoundingClientRect();
@@ -1127,10 +1192,6 @@
 					        	ctx_full.drawImage(img, 0, 0);
 
 					        	HermiteDownsample(canvas_full, canvas_small, sWidth, sHeight);
-
-					        	//window.canny = CannyJS.canny(canvas_full, 100, 50, 1.5, 9);
-
-					        	imgData = new GrayImageData(canvas_full.width, canvas_full.height);
 
 					        	var c = document.getElementById('modal-canvas');
 					        	c.addEventListener("mousemove", function(e) {
@@ -1214,9 +1275,8 @@
 				            	});
 					        }
 
-					        var updateFilteredImg = function() {
+					        var setImageSettings = function(settings) {
 					        	var valBlurKernel, valBlurSigma, valEdgeAlgo, valEdgeKernel, valHyst, valHystHigh, valHystLow, valInvert;
-					        	var blur, sobel, nms, hyst, invert;
 
 					        	valBlurKernel = $('#filter_blurKernel').slider("getValue");
 					        	valBlurSigma = $('#filter_blurSigma').slider("getValue");
@@ -1237,32 +1297,37 @@
 					        	else
 					        		valInvert = false;
 
-					        	imgData.loadCanvas(canvas_full);
-							    blur = CannyJS.gaussianBlur(imgData, valBlurSigma, valBlurKernel);
+					        	settings.updateSettings(valBlurKernel, valBlurSigma, valEdgeAlgo, valEdgeKernel, valHystHigh, valHystLow, valInvert);
+					        }
 
-							    switch (valEdgeAlgo) {
-							    	case "Roberts":
-							    		algo = CannyJS.roberts(blur, valEdgeKernel);
-							    		break;
-							    	case "Prewitt":
-							    		algo = CannyJS.prewitt(blur, valEdgeKernel);
-							    		break;
-							    	default:
-							    		algo = CannyJS.sobel(blur, valEdgeKernel);
-							    		break;
-							    }
+					        var updateFilteredImg = function() {
+					        	dimScreen();
 
-							    nms = CannyJS.nonMaximumSuppression(algo);
-							    hyst = CannyJS.hysteresis(nms, valHystHigh, valHystLow);
+					        	var imgData = new GrayImageData(canvas_full.width, canvas_full.height);
+								imgData.loadCanvas(canvas_full);
 
-							    if (valInvert)
-							    	invert = CannyJS.invert(hyst);
-							    else
-							    	invert = hyst;
+					        	var imgSettings = new GrayImageSettings();
+					        	setImageSettings(imgSettings);
 
-							    invert.drawOn(canvas_offscreen);
+								workerStart(imgData, imgSettings);
 
-							    alert("Finished!");
+					        }
+
+					        function workerCallback(e) {
+					            if (e.data.success) {
+						  			var imgData = e.data.result;
+						  			console.log(imgData.width + ", " + imgData.height);
+
+						  			var imgData = new GrayImageData(e.data.result.width, e.data.result.height);
+						  			imgData.loadData(e.data.result.data);
+						  			imgData.drawOn(canvas_offscreen);
+
+						  			undimScreen();
+								}
+							}
+
+					        var workerStart = function(image, settings) {
+					        	worker.postMessage({ 'cmd': 'processImg', 'image': image, 'settings': settings })
 					        }
 
 					        $("#modal-canvas").on("mouseenter", function() {
@@ -1273,11 +1338,13 @@
 								hideZoomCanvas();
 							});
 
-							$("#btn_filter_apply").on('click', function () {
-				                updateFilteredImg();
+							$("#btn_filter_defaults").on('click', function () {
+
 				            });
 
-							//$('imgFilterModal').modal('show');
+							$("#btn_filter_apply").on('click', function () {
+								updateFilteredImg();
+				            });
 	                    }
                     }
                     else {
